fix: ajustando overflow main banner

--- a/src/components/main-banner/main-banner.css
+++ b/src/components/main-banner/main-banner.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 5rem;
+    overflow: hidden;
     width: 100%;
 }
 
